# index-prototype

./: .gitignore  compose.yaml  hello.py  pyproject.toml
api/: pyproject.toml
builder/: pyproject.toml
builder/src/builder/: __init__.py
chunker/: pyproject.toml
crawler/: pyproject.toml
crawler/src/crawler/: loader.py  pubsub.py  settings.py
crawler/tests/: test_arxiv_crawler.py
docker/: Dockerfile.builder  Dockerfile.gateway  Dockerfile.worker
extractor/src/extractor/: __init__.py
index/: pyproject.toml
index/src/index/: __init__.py
lib/auth/: pyproject.toml
lib/broker/: pyproject.toml
lib/broker/src/broker/: __init__.py  models.py  utils.py
lib/broker/src/broker/rabbitmq/: _conn.py  publisher.py  settings.py  subscriber.py  types.py
lib/broker/src/broker/testing/: _conn.py
lib/db/: pyproject.toml
lib/db/src/db/: __init__.py  settings.py
lib/db/src/db/engines/: pg.py
lib/fe/: pyproject.toml
lib/fe/src/fe/: __init__.py
lib/logs/: pyproject.toml
lib/logs/src/logs/: __init__.py  configure.py
lib/storage/: pyproject.toml
lib/storage/src/storage/: __init__.py  _minio.py  proto.py
lib/tasks/: pyproject.toml
lib/tasks/src/tasks/: __init__.py  models.py  proto.py
lib/tasks/src/tasks/pg/: _controller.py  schema.py
parser/src/parser/: __init__.py
services/index/builder/: pyproject.toml
services/index/builder/src/builder/: __init__.py  processor.py  settings.py
services/index/builder/src/builder/builder/: __init__.py  _interface.py  neo4j.py
services/index/chunker/src/chunker/: __init__.py
services/index/crawler/: pyproject.toml
services/index/crawler/src/crawler/: __init__.py  pubsub.py  settings.py
services/index/extractor/: pyproject.toml
services/index/gateway/: pipeline.yaml  pyproject.toml
services/index/gateway/src/gateway/: __init__.py  base.py  settings.py
services/index/gateway/src/gateway/api/: models.py
services/index/gateway/src/gateway/api/dependencies/: config.py  resources.py
services/index/gateway/src/gateway/api/routers/: __init__.py  arxiv.py  pipeline.py  tasks.py
services/index/gateway/src/gateway/application/: arxiv.py  status.py
services/index/gateway/src/gateway/domain/: arxiv.py  publish.py  status.py
services/index/parser/: pyproject.toml
services/index/workers/: pyproject.toml
services/index/workers/src/worker/: __init__.py  processor.py  settings.py
services/index/workers/src/worker/handler/: __init__.py  _interface.py  utils.py
services/index/workers/src/worker/handler/chunker/: __init__.py  arxiv.py  handler.py
services/index/workers/src/worker/handler/crawler/: __init__.py  arxiv.py  handler.py
services/index/workers/src/worker/handler/extractor/: __init__.py  extractor.py  handler.py
services/index/workers/src/worker/handler/parser/: __init__.py  arxiv.py  handler.py
services/query/: pyproject.toml
services/query/src/query/: __init__.py
