[project]
name = "avatarin-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["lib/db", "lib/graphdb", "lib/tasks", "lib/logs", "lib/storage", "lib/auth", "lib/broker", "extractor", "parser", "chunker", "crawler", "builder", "api"]
