[project]
name = "chunker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "quanhm-1332", email = "hoang.minh.quan@sun-asterisk.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
chunker = "chunker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
