[project]
name = "db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "quanhm-1332", email = "hoang.minh.quan@sun-asterisk.com" }
]
requires-python = ">=3.12"
dependencies = [
    "logs",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
]

[project.optional-dependencies]
logfire = [
    "logfire[sqlalchemy]>=3.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
logs = { workspace = true }
