[project]
name = "logs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "quanhm-1332", email = "hoang.minh.quan@sun-asterisk.com" }
]
requires-python = ">=3.12"
dependencies = [
    "structlog>=25.4.0",
]

[project.optional-dependencies]
logfire = ["logfire>=3.21.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
