[project]
name = "tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "quanhm-1332", email = "hoang.minh.quan@sun-asterisk.com" }
]
requires-python = ">=3.12"
dependencies = [
    "db",
    "logs",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
    "structlog>=25.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
logs = { workspace = true }
db = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
