[project]
name = "builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "quanhm-1332", email = "hoang.minh.quan@sun-asterisk.com" }]
requires-python = ">=3.12"
dependencies = [
    "broker",
    "logs",
    "neo4j>=5.28.1",
    "pydantic-settings[yaml]>=2.10.0",
    "requests>=2.32.4",
    "storage",
    "structlog>=25.4.0",
    "tasks",
]

[project.scripts]
builder = "builder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
logs = { workspace = true }
broker = { workspace = true }
storage = { workspace = true }
tasks = { workspace = true }
