[project]
name = "extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "quanhm-1332", email = "hoang.minh.quan@sun-asterisk.com" }
]
requires-python = ">=3.12"
dependencies = [
    "broker",
    "db",
    "logs",
    "spacy>=3.8.7",
    "storage",
    "tasks",
]

[project.scripts]
extractor = "extractor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
logs = { workspace = true }
broker = { workspace = true }
db = { workspace = true }
storage = { workspace = true }
tasks = { workspace = true }

[dependency-groups]
dev = [
    "pip>=25.1.1",
    "rich>=14.0.0",
]
