[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "quanhm-1332", email = "hoang.minh.quan@sun-asterisk.com" }]
requires-python = ">=3.12"
dependencies = [
    "broker",
    "db",
    "fastapi>=0.115.13",
    "logs",
    "pydantic>=2.11.7",
    "storage",
    "structlog>=25.4.0",
    "tasks",
]

[project.scripts]
gateway = "gateway:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
logs = { workspace = true }
broker = { workspace = true }
db = { workspace = true }
storage = { workspace = true }
tasks = { workspace = true }
